# stratos

./: .gitignore  COMPLETE_INTEGRATION.md  ENTRY_POINT_RESOLUTION.md  IMPLEMENTATION_SUMMARY.md  INTERPRETER_IMPLEMENTATION.md  README.md  SEMANTIC_ANALYZER_IMPLEMENTATION.md  STDLIB_IMPLEMENTATION.md  Stratos.md  TYPE_CHECKING_IMPLEMENTATION.md
.zed/: settings.json
Stratos Compiler/: Stratos Compiler.cbp  Stratos Compiler.layout  main.c  main.cpp  path.c
compiler/: README.md  REAME.md
design/: compiler_architecture.md  compiler_design_thoughts.md  design.md  design_thoughts.md  grammar.ebnf  interpreter_implementation.md  oop_runtime_implementation.md  project_configuration.md  standard_library.md  standard_library_thoughts.md
docs-old/: .buildinfo  folder_structure.html  help.html  installing.html  objects.inv  (+1 more)
interpreter/C++/: BUILD.md  CMakeLists.txt  README.md  build.sh
interpreter/C++/include/stratos/: AST.h  AsyncRuntime.h  DependencyManager.h  IRGenerator.h  Interpreter.h  LockFile.h  NativeRegistry.h  Optimizer.h  Parser.h  ProjectConfig.h  SemanticAnalyzer.h  SymbolTable.h  Token.h  TypeSystem.h
interpreter/C++/src/: main.cpp  main.cpp.bk
interpreter/C++/src/codegen/: IRGenerator.cpp
interpreter/C++/src/config/: DependencyManager.cpp  LockFile.cpp  ProjectConfig.cpp
interpreter/C++/src/lexer/: Lexer.cpp
interpreter/C++/src/optimizer/: Optimizer.cpp
interpreter/C++/src/parser/: Parser.cpp
interpreter/C++/src/runtime/: AsyncRuntime.cpp  Interpreter.cpp  NativeRegistry.cpp  TypeSystem.cpp
interpreter/C++/src/sema/: SemanticAnalyzer.cpp
(+966 files in other folders)
